--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.1'
 services:
-  cadvisor: # container metric prometheus exporter
-    image: gcr.io/cadvisor/cadvisor:v0.47.1
+  cadvisor:
+    # container metric prometheus exporter
+    image: gcr.io/cadvisor/cadvisor:0.99-porterdavid
     container_name: cadvisor
     ports:
       - "8081:8080"
@@ -25,7 +26,8 @@ services:
     volumes:
       - ./loki/:/etc/loki/
     command: -config.file=/etc/loki/config.yaml
-  prometheus: # metrics aggregation and alert definition server (prometheus server)
+  prometheus:
+    # metrics aggregation and alert definition server (prometheus server)
     image: prom/prometheus:v2.33.4
     volumes:
       - ./prometheus/:/etc/prometheus/
@@ -38,7 +40,8 @@ services:
       driver: loki
       options:
         loki-url: "http://host.docker.internal:3100/loki/api/v1/push"
-  alertmanager: # alert manager (prometheus)
+  alertmanager:
+    # alert manager (prometheus)
     image: prom/alertmanager:v0.23.0
     volumes:
       - ./alertmanager/:/config/
@@ -49,7 +52,8 @@ services:
       driver: loki
       options:
         loki-url: "http://host.docker.internal:3100/loki/api/v1/push"
-  grafana: # dashboard visualisation tool (metrics & logs)
+  grafana:
+    # dashboard visualisation tool (metrics & logs)
     image: grafana/grafana:8.4.3
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
@@ -60,7 +64,8 @@ services:
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-  wrk-injector-hello-functional: # traffic injector (low)
+  wrk-injector-hello-functional:
+    # traffic injector (low)
     image: mtchavez/docker-wrk
     profiles: [ "perf" ]
     command: wrk -t4 -c10 -d300s http://host.docker.internal:8080/hello-world
@@ -68,7 +73,8 @@ services:
       driver: loki
       options:
         loki-url: "http://host.docker.internal:3100/loki/api/v1/push"
-  wrk-injector-info-perf: # traffic injector (high)
+  wrk-injector-info-perf:
+    # traffic injector (high)
     image: mtchavez/docker-wrk
     profiles: [ "perf" ]
     command: wrk -t4 -c1000 -d5m --timeout 1s --latency http://host.docker.internal:8080/info
